--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
 #         run: |
 #           pip install pytest          
           
-      - name: Lint with pylint
-        working-directory: FastAPI/
-        run: |
-          make lint
+#       - name: Lint with pylint
+#         working-directory: FastAPI/
+#         run: |
+#           make lint
 #       - name: Test with pytest
 #         run: |
 #           make test
