--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
 #       - name: Test with pytest
 #         run: |
 #           make test
-      - name: Format code
-        run: |
-          make format
+#       - name: Format code
+#         run: |
+#           make format
